--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère Agence de Web Design" />
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo La Panthère Agence de Web Design" />
 						<h1 class="text-center hero-bloc-text tc-tangerine">
 							Agence La Panthère
 						</h1>
