--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="La Panthère : Agence de Web Design basée à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
+	<link rel="preload" href="./fonts/et-line.woff2" as="font" type="font/woff" crossorigin>
+	<link rel="preload" href="./fonts/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
