--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
+	<script src="./img/agence-la-panthere.webp" defer></script>
+	<script src="./img/bureau.webp" defer></script>
+	<script src="./img/materiel.webp" defer></script>
+	<script src="./fonts/fontawesome-webfont.woff2?v=4.7.0" defer></script>
+	<script src="./fonts/fontawesome-webfont.woff2" defer></script>
+	<script src="./img/texture-paper.webp" defer></script>
+	<script src="./fonts/et-line.woff" defer></script>
+	<script src="./img/magazines.webp" defer></script>
+	<script src="./img/photographe.webp" defer></script>
+	<script src="./css/bootstrap.css" defer></script>
+	<script src="./js/gmaps.js" defer></script>
+	<script src="./img/logo.webp" defer></script>
+	<script src="./img/agence-la-panthere-monochrome.svg" defer></script>
+	<script src="./css/font-awesome.css" defer></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./OCR-Projet-4-/style.css" defer></script>
+	<script src="./css/et-line.css" defer></script>
+
+
+
 
     <title>La Panthère : Agence de Web Design</title>
 
